cli: rework git-backport
Reviewed-by: rwestberg